k8s/consul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - image: consul:1.9.1
          name: consul
          ports:
            - containerPort: 8500
              name: server
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  #  type: LoadBalancer
  ports:
    - port: 8500
      protocol: TCP
      targetPort: server
  selector:
    app: consul
