k8s/kubernetes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-sell-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-sell
  template:
    metadata:
      labels:
        app: products-sell
    spec:
      containers:
        - image: ph2355/rso-products-sell:2020-12-03-21-54-21
          name: products-sell
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /health/live
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3
#          readinessProbe:
#            httpGet:
#              path: /health/ready
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: products-sell
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: products-sell
