k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rso-ingress
spec:
  rules:
    - http:
        paths:
          - path: /product-catalog(/|$)(.*)
            backend:
              serviceName: products-sell
              servicePort: 8080
#          - path: /cart(/|$)(.*)
#            backend:
#              serviceName: cart
#              servicePort: 8081
